force-app/main/default/objects/Ligne_de_facture__c/Ligne_de_facture__c.object-meta.xml
<CustomObject>
    <description>Scratch-org client demo invoice line object related to the demo Facture object.</description>
    <label>Ligne de facture</label>
    <nameField>
        <displayFormat>LF-{00000}</displayFormat>
        <label>Numéro de ligne</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes de facture</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>