force-app/main/default/objects/Ligne_de_facture__c/fields/Facture__c.field-meta.xml
<CustomField>
    <fullName>Facture__c</fullName>
    <label>Facture</label>
    <referenceTo>Facture__c</referenceTo>
    <relationshipLabel>Lignes de facture</relationshipLabel>
    <relationshipName>Lignes_de_facture</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>