force-app/main/default/objects/Ligne_de_facture__c/fields/Prix_unitaire_HT__c.field-meta.xml
<CustomField>
    <fullName>Prix_unitaire_HT__c</fullName>
    <label>Prix unitaire HT</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>