force-app/main/default/objects/Ligne_de_facture__c/fields/TVA__c.field-meta.xml
<CustomField>
    <fullName>TVA__c</fullName>
    <label>TVA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FR_200</fullName>
                <default>true</default>
                <label>20 %</label>
            </value>
            <value>
                <fullName>FR_100</fullName>
                <label>10 %</label>
            </value>
            <value>
                <fullName>FR_055</fullName>
                <label>5,5 %</label>
            </value>
            <value>
                <fullName>FR_021</fullName>
                <label>2,1 %</label>
            </value>
            <value>
                <fullName>FR_00</fullName>
                <label>0 %</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>